--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -3,7 +3,7 @@
     <div class="sixteen wide column">
         
         <div class="ui top attached header segment">
-            <span>ค้นหารายการคุมเช็ค</span>
+            <span>ค้นหารายการคุม KTB-Corporate</span>
         </div>
 
         <div class="ui attached segment">
