--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -76,7 +76,7 @@
                         </a>
                         <a class="ui mini primary button widtd-100">
                             <i class="print icon"></i>
-                            Export
+                            ส่งออก
                         </a>
                         <a id="btnSave" class="ui mini primary button widtd-100" (click)="saveAllData()">
                             <i class="arrow save icon"></i>
