--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-3/int01-4-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-3/int01-4-3.component.html
@@ -39,7 +39,7 @@
             ย้อนกลับ
           </button>
           <button class="ui mini primary button" routerLink="/int01/4/4">
-            <i class="print icon"></i>   Export
+            <i class="print icon"></i>   ส่งออก
           </button>
           <button class="ui mini primary button" routerLink="/int01/4/4">
             ตั้งค่าจับคู่รหัสภาษี
