--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-2/int02-m5-2-1/int02-m5-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m5/int02-m5-2/int02-m5-2-1/int02-m5-2-1.component.html
@@ -170,7 +170,7 @@
             </table>
         </div>
         <div class="ui center aligned last-button">
-            <button class="ui icon orange mini button" (click)="export()">export</button>
+            <button class="ui icon orange mini button" (click)="export()">ส่งออก</button>
             <button class="ui icon grey mini button" (click)="back()">กลับ</button>
         </div>
     </div>
