--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
@@ -98,7 +98,7 @@
         <br>
         <div class="ui centered grid">
             <button class="ui mini gray button" type="button"  routerLink="/int05/1/1">กลับ</button>
-            <button class="ui mini blue button" type="button">Export</button>
+            <button class="ui mini blue button" type="button">ส่งออก</button>
         </div>
         <br>
     </div>
