--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-7/int06-7.component.html
@@ -112,7 +112,7 @@
     <div class="ui center aligned grid" style="margin-top: 20px;">
         <div class="sixteen wide column">
             <button class="ui mini orange button" (click)="export()">
-              <i class="fa-file icon"></i> export
+              <i class="fa-file icon"></i> ส่งออก
             </button>
         </div>
     </div>
