--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5.component.html
@@ -287,7 +287,7 @@
     <div class="eight wide column">
       <button class="ui mini primary button width-100">
         <i class="print  icon"></i>
-        Export
+        ส่งออก
       </button>
 
     </div>
