--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -436,7 +436,7 @@
 <div id="modalInt0813" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการ
+    กำหนดเงื่อนไขความเสี่ยง และแปลงค่าประเมินความเสี่ยงโครงการ
   </div>
 
   <div class="content">
