--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-7/int08-1-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-7/int08-1-7.component.html
@@ -1,7 +1,9 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <div class="ui grid">
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายละเอียดหัวกระดาษทำการ</span>
+      <span>รายละเอียดประเมินความเสี่ยงโครงการยุทธศาสตร์ของกรมสรรพสามิต</span>
     </div>
     <div class="ui attached segment">
       <div class="ui form">
@@ -37,14 +39,14 @@
             </button>
             <button class="ui mini primary button" (click)="modalConditionRL()">
               <i class="setting icon"></i>
-              กำหนดเงื่อนไข RL
+              กำหนดเงื่อนไขความเสี่ยง
             </button>
             <button class="ui mini primary button" (click)="modalpercent()">
-              กำหนดค่า %
+              กำหนดค่าร้อยละ
             </button>
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
               <i class="print icon"></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini primary button" (click)="cancelFlow()">
               ยกเลิก
@@ -58,7 +60,7 @@
     <BR/>
     <div class="sixteen wide column" *ngIf="getConditionShow()">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+        <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
       </div>
 
       <div class="ui attached segment">
