--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-6/int08-2-6.component.html
@@ -205,7 +205,7 @@
 <div id="modalInt082" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบสารสนเทศหลักของกรมฯ
+    กำหนดเงื่อนไขความเสี่ยง และแปลงค่าประเมินความเสี่ยงระบบสารสนเทศหลักของกรมฯ
 
   </div>
 
