--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-10/int08-3-10.component.html
@@ -72,7 +72,7 @@
             </button>
 
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
-              Export
+              ส่งออก
             </button>
             <button class="ui mini primary button" (click)="cancelFlow()">
               ยกเลิก
