--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-2/int08-3-2.component.html
@@ -62,7 +62,7 @@
   </div>
   <div class="sixteen wide column" *ngIf="isConditionShow">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงความถี่การเข้าตรวจสอบ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงความถี่การเข้าตรวจสอบ</span>
     </div>
 
     <div class="ui attached segment">
