--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -175,7 +175,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" print icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearDataForm1() ">
               <i class="arrow left icon"></i>
@@ -277,7 +277,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" print icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearDataForm2() ">
               <i class="arrow left icon"></i>
@@ -377,7 +377,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" print icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearDataForm3() ">
               <i class="arrow left icon"></i>
@@ -468,7 +468,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" print icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearDataForm3() ">
               <i class="arrow left icon"></i>
