--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -359,7 +359,7 @@
 <div id="modalInt0812" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงโครงการด้านประสิทธิภาพ
+    กำหนดเงื่อนไขความเสี่ยง และแปลงค่าประเมินความเสี่ยงโครงการด้านประสิทธิภาพ
   </div>
 
   <div class="content">
