--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-4/int08-1-4.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <div class="ui grid">
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
