--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-6/int08-1-6.component.html
@@ -151,11 +151,11 @@
             </button>
             <button class="ui mini primary button" (click)="modalConditionRL()">
               <i class="setting icon"></i>
-              กำหนดเงื่อนไข RL
+              กำหนดเงื่อนไขความเสี่ยง
             </button>
             <button class="ui mini primary button" (click)="ExportOtherDtl()">
               <i class="print icon"></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini  button" (click)="cancelFlow()">
               ยกเลิก
@@ -168,7 +168,7 @@
   </div>
   <div class="sixteen wide column" *ngIf="getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
     </div>
 
     <div class="ui attached segment">
