--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -182,7 +182,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button" (click)="ExportInfWebService()">
               <i class="print icon"></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearDataForm1()">
               <i class="arrow left icon"></i>
@@ -281,7 +281,7 @@
             <div class="sixteen wide column">
               <button class="ui mini primary button" (click)="ExportInfOtherDtl()">
                 <i class="print icon"></i>
-                Export
+                ส่งออก
               </button>
               <button class="ui mini button " (click)="clearDataForm2() ">
                 <i class="arrow left icon"></i>
@@ -374,7 +374,7 @@
               <div class="sixteen wide column">
                 <button class="ui mini primary button" (click)="ExportInfFull()">
                   <i class="print icon" ></i>
-                  Export
+                  ส่งออก
                 </button>
                 <button class="ui mini button " (click)="clearDataForm3() ">
                   <i class="arrow left icon"></i>
