--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-5/int08-2-5.component.html
@@ -35,14 +35,14 @@
               </button>
               <button class="ui mini primary button" (click)="modalConditionRL()">
                 <i class="setting icon"></i>
-                กำหนดเงื่อนไข RL
+                กำหนดเงื่อนไขความเสี่ยง
               </button>
               <button class="ui mini primary button" (click)="modalpercent()">
-                กำหนดค่า %
+                กำหนดค่าร้อยละ
               </button>
               <button class="ui mini primary button" (click)="ExportInfFull()">
                 <i class="print icon"></i>
-                Export
+                ส่งออก
               </button>
               <button class="ui mini primary button" (click)="cancelFlow()">
                 ยกเลิก
@@ -57,7 +57,7 @@
 
   <div class="sixteen wide column" *ngIf="getConditionShow()">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+        <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
       </div>
 
       <div class="ui attached segment">
