--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -176,7 +176,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -277,7 +277,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -380,7 +380,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -484,7 +484,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -589,7 +589,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -690,7 +690,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -791,7 +791,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -893,7 +893,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -982,7 +982,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
@@ -1085,7 +1085,7 @@
           <div class="sixteen wide column">
             <button class="ui mini primary button">
               <i class=" add icon "></i>
-              Export
+              ส่งออก
             </button>
             <button class="ui mini button " (click)="clearData() ">
 
