--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-11/int08-3-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-11/int08-3-11.component.html
@@ -76,10 +76,10 @@
               บันทึก
             </button>
             <button class="ui mini primary button" (click)="modalConditionRL()">
-              กำหนดเงื่อนไข RL
+              กำหนดเงื่อนไขความเสี่ยง
             </button>
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
-              Export
+              ส่งออก
             </button>
             <button class="ui mini primary button" (click)="cancelFlow()">
               ยกเลิก
@@ -92,7 +92,7 @@
   </div>
   <div class="sixteen wide column" *ngIf="getConditionShow()">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+      <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
     </div>
 
     <div class="ui attached segment">
