--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -33,13 +33,13 @@
           <div class="ui center aligned grid btn">
 
             <button class="ui mini primary button" (click)="modalConditionRL()">
-              กำหนดเงื่อนไข RL
+              กำหนดเงื่อนไขความเสี่ยง
             </button>
             <button class="ui mini primary button" (click)="modalpercent()">
-              กำหนดค่า %
+              กำหนดค่าร้อยละ
             </button>
             <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
-              Export
+              ส่งออก
             </button>
             <button class="ui mini primary button" (click)="cancelFlow()">
               ยกเลิก
@@ -53,7 +53,7 @@
     <BR />
     <div class="sixteen wide column" *ngIf="getConditionShow()">
       <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+        <span>กำหนดเงื่อนไขความเสี่ยง ปัจจัยเสี่ยงอื่นๆ</span>
       </div>
 
       <div class="ui attached segment">
