--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
@@ -146,7 +146,7 @@
         <div class="sixteen wide column">
           <button class="ui mini yellow button" (click)="exportFollowUpDepartment()">
             <i class="print icon"></i>
-            Export
+            ส่งออก
           </button>
           <button class="ui mini red button" (click)="deleteData()">
             <i class="trash alternate icon"></i>
