--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -79,9 +79,9 @@
                             <i class="search icon"></i>
                             วิเคราะห์ข้อมูลเบื้องต้น
                         </button>
-                        <button type="submit" class="ui mini primary button" (click)="webService()">
+                        <!-- <button type="submit" class="ui mini primary button" (click)="webService()">
                             Web Service
-                        </button> 
+                        </button>  -->
                         <!-- routerLink="/analyst-basic-data-trader" -->
                         <button type="reset" class="ui mini button">
                             <i class="refresh icon"></i>
