--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-data/add-data.component.html
@@ -217,11 +217,11 @@
   <div class="ui bottom centered attached segment">
     <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui mini green button" type="submit">
+        <button class="ui mini primary button" type="submit">
           <i class="save icon"></i>
           ตกลง
         </button>
-        <button class="ui mini red button" type="button" (click)="onCancel()">
+        <button class="ui mini grey button" type="button" (click)="onCancel()">
           <i class="times icon"></i>
           ยกเลิก
         </button>
